force-app/main/default/objects/Investment_Transaction2__c/Investment_Transaction2__c.object-meta.xml
<CustomObject>
    <label>Investment Transaction</label>
    <nameField>
        <displayFormat>ITA-{000000}</displayFormat>
        <label>Investment Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>